<resources>
    <string name="app_name">Powerking Betting Tips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //urls

    <string name="twitter_profile">http://www.twitter.com/@codespear_org</string>
    <string name="telegram_channel">https://t.me/centurytips</string>
    <string name="whatsapp_channel">https://chat.whatsapp.com/BwNPTEQTR5FABFepXPHe2Q</string>
    <string name="more_apps_url">https://play.google.com/store/apps/developer?id=Maru developers</string>
    <string name="affiliate_url">https://www.afiliapub.com/affiliates/scripts/click.php?a_aid=23765767&amp;a_bid=051533c4</string>

    //paypal
    <string name="paypal_client_key">ATpK65g9eu6gxJMBzHf-Dm3JAQ6xtH0AN7ISXgcW_TJEjUoxaUa_5lvGr9kABqFcDRFNmjb3WpFTc4h0</string>
    <string name="PAYPAL_REQUEST_CODE">123</string>
    <string name="amount">5.9</string>

    <string name="more_apps">More Apps</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="get_free_bet">Get Free Bet</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="account_settings">Account Settings</string>
    <string name="follow_us">Follow us:</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="user_not_found">User Not Found!</string>
    <string name="login_or_signup">Login or sign up to access your account</string>

    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="basic">BASIC</string>
    <string name="premium">PREMIUM</string>

    <string name="upgrade">Upgrade Now</string>
    <string name="sign_up">Sign up</string>
    <string name="login">login</string>
    <string name="ok">OK</string>
    <string name="update_now">update now</string>

    <string name="upgrade_to_premium">Upgrade To Premium</string>
    <string name="continue_payment">Pay $5.9 To Upgrade Your Membership To Premium</string>
    <string name="continue_with_paypal">CONTINUE WITH PAYPAL</string>
    <string name="oops">OOPS!</string>

    <string name="welcome_back">WELCOME BACK</string>
    <string name="get_started_now">GET STARTED NOW</string>
    <string name="logout">Logout</string>

    <!--Ad Unit -->
    <string name="App_Id">ca-app-pub-3940256099942544~33475117130</string>
    <string name="Interstitial_Ad_Unit">ca-app-pub-3940256099942544/10331737120</string>
    <string name="Banner_Ad_Unit">ca-app-pub-3940256099942544/63009781110</string>
    <string name="Native_Ad_Unit">ca-app-pub-3940256099942544/22476961100</string>

</resources>