<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/follow_us" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp">
            <ImageButton
                android:id="@+id/btnTwitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:contentDescription="@string/twitter_profile"
                android:src="@drawable/twitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white"/>
            <ImageButton
                android:id="@+id/btnTelegram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:contentDescription="@string/telegram_channel"
                android:src="@drawable/telegram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white"/>
            <ImageButton
                android:id="@+id/btnWhatsapp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:contentDescription="@string/whatsapp_channel"
                android:src="@drawable/whatsapp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMore"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/more_apps"
            android:layout_margin="5dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/share"
            android:layout_margin="5dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_share_24"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/rate_us"
            android:layout_margin="5dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_star_rate_24"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTerms"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/terms_of_service"
            android:layout_margin="5dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFreeBet"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/get_free_bet"
            android:layout_margin="5dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>
    </LinearLayout>
</RelativeLayout>