<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/update_your_profile"
            android:layout_marginBottom="50dp"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/update_now"
            android:layout_marginVertical="10dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>
    </LinearLayout>
</RelativeLayout>