<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/bottom_sheet_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/upgrade_to_premium"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:drawablePadding="20dp"
        app:drawableTint="@color/white"
        app:drawableStartCompat="@drawable/baseline_rocket_launch_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/continue_payment"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/continue_with_paypal"
        android:layout_marginVertical="10dp"
        android:drawableTint="@color/green"
        android:textColor="@color/green"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/green"
        app:strokeWidth="1dp"/>
</LinearLayout>