<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/powerking_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:layout_width="190dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/get_started_now"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:background="@drawable/background_edittext"/>

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/background_edittext"/>

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/background_edittext"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                android:layout_marginVertical="10dp"
                android:drawableTint="@color/green"
                android:textColor="@color/green"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/green"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>