<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".AccountFragment">

    <LinearLayout
        android:id="@+id/noUserLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_dangerous_24"
            android:layout_gravity="center"
            app:tint="@color/red"
            android:contentDescription="@string/basic" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_not_found"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_signup"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/green"
            android:layout_marginVertical="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:layout_marginVertical="10dp"
            android:drawableTint="@color/green"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            android:drawableEnd="@drawable/baseline_arrow_forward_24"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/textPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/basic"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginHorizontal="5dp"
                app:drawableTint="@color/yellow"
                app:drawableStartCompat="@drawable/baseline_tips_and_updates_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpgrade"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/upgrade"
                android:drawableTint="@color/green"
                android:textColor="@color/green"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/green"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_rocket_launch_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/username"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/textUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/email"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="18sp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/account_settings"
                android:layout_marginVertical="10dp"
                android:drawableTint="@color/yellow"
                android:textColor="@color/yellow"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/yellow"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_settings_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/logout"
                android:layout_marginVertical="10dp"
                android:drawableTint="@color/red"
                android:textColor="@color/red"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_logout_24"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>